<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TextView android:id="@+id/Text0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/text"
    />
    <ScrollView
		android:id="@+id/ScrollView01"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:scrollbars="vertical"
		android:layout_weight="1"
		>
	<TextView android:id="@+id/in"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    />
    </ScrollView>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
		<EditText  
			android:id="@+id/Edit0" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_gravity="bottom">
		</EditText>
		<Button 
			android:text="@string/send" 
			android:id="@+id/btn_send" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:onClick="onSendButtonClicked">
		</Button>
		<Button 
 			android:text="@string/sendCon" 
 			android:id="@+id/btn_sendCon" 
 			android:layout_width="wrap_content" 
 			android:layout_height="wrap_content"
 			android:onClick="onSendConButtonClicked">
 		</Button>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"       
        >
       	<Button 
			android:text="@string/connect" 
			android:id="@+id/btn_connect" 
			android:layout_width="match_parent" 
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:onClick="onConnectButtonClicked">
		</Button>
		<Button 
			android:text="@string/hex" 
			android:id="@+id/btn_hex_ascii" 
			android:layout_width="match_parent" 
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:onClick="onHexButtonClicked">
		</Button>
		<Button 
			android:text="@string/clear" 
			android:id="@+id/btn_clear" 
			android:layout_width="match_parent" 
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:onClick="onClearButtonClicked">
		</Button>
		<Button 
			android:text="@string/quit" 
			android:id="@+id/btn_quit" 
			android:layout_width="match_parent" 
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:onClick="onQuitButtonClicked">
		</Button>
    </LinearLayout>
</LinearLayout>